--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/fingerpose.js",
   "source": "src/index.js",
   "scripts": {
-    "dev": "webpack --mode development --progress --colors --watch",
-    "build": "webpack --mode production"
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode development --progress --colors --watch",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
   "author": "Andreas Schallwig",
   "license": "MIT",
   "engines": {
-    "node": "10"
+    "node": ">12"
   },
   "bugs": {
     "url": "https://github.com/andypotato/fingerpose/issues"
